force-app/main/default/objects/Account/fields/OportunidadesContrato__c.field-meta.xml
<CustomField>
    <fullName>OportunidadesContrato__c</fullName>
    <description>Quantidadde de oportunidade do tipo Contrato.</description>
    <label>Oportunidades Contrato</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Contract</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>