force-app/main/default/objects/Account/fields/OportunidadesPosicao__c.field-meta.xml
<CustomField>
    <fullName>OportunidadesPosicao__c</fullName>
    <description>Quantidade de Oportunidade do tipo posição</description>
    <label>Oportunidades Posição</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Position</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>