force-app/main/default/objects/Account/fields/PosicoesContratadas__c.field-meta.xml
<CustomField>
    <fullName>PosicoesContratadas__c</fullName>
    <description>Quantidade de posicoes contratadas com oportunidades aprovadas.</description>
    <label>Posições Contratadas</label>
    <summarizedField>Opportunity.PositionMonth__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Contract</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>