force-app/main/default/objects/Account/fields/PosicoesDisponiveis__c.field-meta.xml
<CustomField>
    <fullName>PosicoesDisponiveis__c</fullName>
    <description>Quantidade de posicoes disponiveis com oportunidades aprovadas.</description>
    <label>Posições Disponíveis</label>
    <summarizedField>Opportunity.PositionMonth__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Contract</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>