force-app/main/default/objects/Account/fields/UltimoContrato__c.field-meta.xml
<CustomField>
    <fullName>UltimoContrato__c</fullName>
    <inlineHelpText>Data de inicio do último contrato a ser ativado.</inlineHelpText>
    <label>Último Contrato</label>
    <summarizedField>Opportunity.StartDate__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>